--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="google-site-verification" content="QPClb_eD-Andq7yaWaZOVYhWiDdiWVyVI0ID-5jA2NA" />
     <title>Ibrahim's portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
